Add linear anaylsis

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -32,6 +32,78 @@
    "outputs": [],
    "source": [
     "from wall_analysis import parse_experiments\n",
+    "import seaborn as sns\n",
+    "from plotting_tools import save_fig\n",
+    "\n",
+    "def plot_plositions(row, min_time=None, max_time=None, max_dist=None):\n",
+    "    positions_cm = row.positions[:, :3] * 100\n",
+    "    fig, axs = plt.subplots(1, 3) \n",
+    "    fig.set_size_inches(10, 3.3)\n",
+    "    fig.suptitle(row.appendix, y=1.0)\n",
+    "    \n",
+    "    mask_time = np.ones_like(row.seconds, dtype=np.bool)\n",
+    "    if min_time is not None:\n",
+    "        mask_time = (row.seconds > min_time) \n",
+    "    if max_time is not None:\n",
+    "        mask_time = mask_time & (row.seconds < max_time)\n",
+    "        \n",
+    "    time = row.seconds[mask_time]\n",
+    "    \n",
+    "    #axs[0].plot(x=positions_cm[:, 0], y=positions_cm[:, 1], color=colors())\n",
+    "    sns.scatterplot(x=positions_cm[mask_time, 0], y=positions_cm[mask_time, 1], \n",
+    "                    hue=time, ax=axs[0], linewidth=0, \n",
+    "                    #size=positions_cm[:, 2],\n",
+    "                    palette='inferno')\n",
+    "    axs[0].set_xlabel('x [cm]')\n",
+    "    axs[0].set_ylabel('y [cm]')\n",
+    "    axs[0].axis('equal')\n",
+    "    axs[0].legend(loc='lower right', title='time [s]')\n",
+    "\n",
+    "    axs[1].plot(time, positions_cm[mask_time, 0], label='x')\n",
+    "    axs[1].plot(time, positions_cm[mask_time, 1], label='y')\n",
+    "    axs[1].plot(time, positions_cm[mask_time, 2], label='z')\n",
+    "    axs[1].set_xlabel('time [s]')\n",
+    "    axs[1].set_ylabel('movement [cm]')\n",
+    "    if max_dist is not None:\n",
+    "        axs[1].set_ylim(-max_dist, max_dist)\n",
+    "    axs[1].legend(loc='lower right')\n",
+    "\n",
+    "    axs[2].plot(time, row.positions[mask_time, 3], label='yaw')\n",
+    "    axs[2].set_ylabel('yaw [deg]')\n",
+    "    axs[2].set_xlabel('time [s]')\n",
+    "    axs[2].set_ylim(-20, 20)\n",
+    "    axs[2].legend(loc='lower right')\n",
+    "    plt.tight_layout()\n",
+    "    return fig, axs\n",
+    "\n",
+    "def plot_audio(row, mic_idx=0):\n",
+    "    all_frequencies = np.unique(row.frequencies_matrix)\n",
+    "    spec = row.spectrogram[:, mic_idx, :]\n",
+    "    spec[spec == 0] = np.nan\n",
+    "    total = np.nanmean(np.abs(spec), axis=1)\n",
+    "    \n",
+    "    label = str(f\"{row.appendix}\").replace('_', '')\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    ax.set_title(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
+    "    pcolorfast_custom(ax, row.seconds, all_frequencies, np.abs(spec))\n",
+    "    ax.set_ylabel('frequency [Hz]')\n",
+    "    return fig, ax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Frequency slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#exp_name = '2020_12_18_stepper'; appendix = \"\"; distance = 51\n",
     "#exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
     "#exp_name = '2021_03_01_flying';\n",
@@ -54,61 +126,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overall analysis"
+    "## 1.1 positions analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "from plotting_tools import save_fig\n",
-    "\n",
-    "min_time = 0\n",
-    "max_time = np.inf\n",
-    "\n",
-    "max_dist = 50 # cm\n",
+    "min_time = None\n",
+    "max_time = None\n",
+    "max_dist = None\n",
     "for i, row in df_total.iterrows():\n",
-    "    print('starting position:', row.positions[0, :])\n",
-    "    positions_cm = row.positions[:, :3] * 100\n",
-    "    \n",
-    "    fig, axs = plt.subplots(1, 3) \n",
-    "    fig.set_size_inches(10, 3.3)\n",
-    "    fig.suptitle(row.appendix, y=1.0)\n",
-    "    \n",
-    "    mask_time = (row.seconds > min_time) & (row.seconds < max_time)\n",
-    "    time = row.seconds[mask_time]\n",
-    "    \n",
-    "    #axs[0].plot(x=positions_cm[:, 0], y=positions_cm[:, 1], color=colors())\n",
-    "    sns.scatterplot(x=positions_cm[mask_time, 0], y=positions_cm[mask_time, 1], \n",
-    "                    hue=time, ax=axs[0], linewidth=0, \n",
-    "                    #size=positions_cm[:, 2],\n",
-    "                    palette='inferno')\n",
-    "    axs[0].set_xlabel('x [cm]')\n",
-    "    axs[0].set_ylabel('y [cm]')\n",
-    "    #axs[0].set_xlim(-max_dist/2, max_dist/2)\n",
-    "    #axs[0].set_ylim(-max_dist/2, max_dist/2)\n",
-    "    axs[0].axis('equal')\n",
-    "    axs[0].legend(loc='lower right', title='time [s]')\n",
-    "\n",
-    "    axs[1].plot(time, positions_cm[mask_time, 0], label='x')\n",
-    "    axs[1].plot(time, positions_cm[mask_time, 1], label='y')\n",
-    "    axs[1].plot(time, positions_cm[mask_time, 2], label='z')\n",
-    "    axs[1].set_xlabel('time [s]')\n",
-    "    axs[1].set_ylabel('movement [cm]')\n",
-    "    axs[1].set_ylim(-max_dist, max_dist)\n",
-    "    axs[1].legend(loc='lower right')\n",
-    "\n",
-    "    axs[2].plot(time, row.positions[mask_time, 3], label='yaw')\n",
-    "    axs[2].set_ylabel('yaw [deg]')\n",
-    "    axs[2].set_xlabel('time [s]')\n",
-    "    axs[2].set_ylim(-20, 20)\n",
-    "    axs[2].legend(loc='lower right')\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    #save_fig(fig, f'plots/{exp_name}{row.appendix}_movement.pdf')"
+    "    fig, axs = plot_plositions(row, min_time, max_time, max_dist)\n",
+    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_movement.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.2 plot audio"
    ]
   },
   {
@@ -129,25 +170,14 @@
     "\n",
     "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
     "for i_col, row in df_total.iterrows():\n",
-    "    all_frequencies = np.unique(row.frequencies_matrix)\n",
-    "    spec = row.spectrogram[:, mic_idx, :]\n",
-    "    print(spec.shape, spec.dtype)\n",
-    "    spec[spec == 0] = np.nan\n",
-    "    total = np.nanmean(np.abs(spec), axis=1)\n",
-    "    \n",
-    "    label = str(f\"{row.appendix}\").replace('_', '')\n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    ax.set_title(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
-    "    pcolorfast_custom(ax, row.seconds, all_frequencies, np.abs(spec))\n",
-    "    ax.set_ylabel('frequency [Hz]')"
+    "    fig, ax = plot_audio(row, mic_idx=mic_idx)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract frequency slices"
+    "# frequency slices"
    ]
   },
   {
@@ -168,7 +198,9 @@
    "outputs": [],
    "source": [
     "# choose the experiment to analyze\n",
-    "row = df_total.iloc[0]"
+    "row = df_total.iloc[0] # works well\n",
+    "#row = df_total.iloc[1] # works ok\n",
+    "#row = df_total.iloc[2] # doesn't work"
    ]
   },
   {
@@ -210,6 +242,8 @@
     "from simulation import get_freq_slice_theory\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
+    "EPS = 1e-10\n",
+    "    \n",
     "starting_distance = 60  # [50, 30, 10]\n",
     "nominal_distances = [60-i*20 for i in range(3)]\n",
     "slice_idx = 0\n",
@@ -218,10 +252,6 @@
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
     "data_collector = DataCollector(exp_name=exp_name)\n",
-    "\n",
-    "signals_f_all = row.stft\n",
-    "frequencies_all = row.frequencies_matrix\n",
-    "positions_all = row.positions\n",
     "\n",
     "fig, ax_distance = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -236,14 +266,14 @@
     "ax_total.set_ylabel(\"probability\")\n",
     "ax_total.set_title(f\"experiment {row.appendix}\")\n",
     "\n",
-    "freqs_calib = np.linspace(np.min(frequencies_all), np.max(frequencies_all), 30)\n",
+    "freqs_calib = np.linspace(np.min(row.frequencies_matrix), np.max(row.frequencies_matrix), 30)\n",
     "f_calib_all = calib_function(freqs_calib)\n",
     "\n",
-    "for i in range(signals_f_all.shape[0]):\n",
-    "    signals_f = signals_f_all[i]\n",
-    "    frequencies = frequencies_all[i]\n",
+    "for i in range(row.stft.shape[0]):\n",
+    "    signals_f = row.stft[i]\n",
+    "    frequencies = row.frequencies_matrix[i]\n",
     "\n",
-    "    if i == signals_f_all.shape[0] - 1:\n",
+    "    if i == row.stft.shape[0] - 1:\n",
     "        sweep_complete = True\n",
     "    else:\n",
     "        sweep_complete = data_collector.detect_sweep(signals_f, frequencies)\n",
@@ -253,7 +283,7 @@
     "            verbose=False\n",
     "        )\n",
     "\n",
-    "        fig, axs = plt.subplots(3, signals_f_all.shape[1])  # , sharey='row')\n",
+    "        fig, axs = plt.subplots(3, row.stft.shape[1])  # , sharey='row')\n",
     "        fig.set_size_inches(15, 10)\n",
     "        fig.suptitle(f\"up to {data_collector.latest_time:.1f}s\", y=0.9)\n",
     "        #fig.set_suptitle(f\"experiment {row.appendix}\")\n",
@@ -278,9 +308,18 @@
     "            freqs, distance_cm=distance_corr, azimuth_deg=azimuth_deg\n",
     "        ).T\n",
     "\n",
-    "        print(\"new frequency slice!\")\n",
+    "        print(\"treating new frequency slice\")\n",
     "\n",
-    "        distance_estimator = DistanceEstimator()\n",
+    "        distance_estimators = {\n",
+    "            'measured': DistanceEstimator(),\n",
+    "            'theo': DistanceEstimator(),\n",
+    "            'theo_corr': DistanceEstimator(),\n",
+    "        }\n",
+    "        linestyles = {\n",
+    "            'measured': \"-\",\n",
+    "            'theo': \":\",\n",
+    "            'theo_corr': \"-.\"\n",
+    "        }\n",
     "\n",
     "        for i_mic in range(f_slice.shape[0]):\n",
     "            axs[0, i_mic].plot(freqs, f_slice[i_mic], label=\"measured\")\n",
@@ -304,27 +343,53 @@
     "                sigma=1.0,\n",
     "                azimuth_deg=azimuth_deg\n",
     "            )\n",
-    "            EPS = 1e-10\n",
     "            proba = (proba - np.min(proba) + EPS) / (\n",
     "                np.max(proba) - np.min(proba) + EPS\n",
     "            )\n",
-    "            distance_estimator.add_distribution(diff_bayes * 1e-2, proba, mic_idx)\n",
+    "            \n",
+    "            # get probability distribution with theoretical\n",
+    "            distances_bayes_theo, proba_theo, diff_bayes_theo = get_probability_bayes(\n",
+    "                f_theo[i_mic],\n",
+    "                freqs,\n",
+    "                mic_idx=i_mic,\n",
+    "                distance_range=distance_range,\n",
+    "                sigma=1.0,\n",
+    "                azimuth_deg=azimuth_deg\n",
+    "            )\n",
+    "            proba_theo = (proba_theo - np.min(proba_theo) + EPS) / (\n",
+    "                np.max(proba_theo) - np.min(proba_theo) + EPS\n",
+    "            )\n",
+    "            \n",
+    "            distances_bayes_theo_corr, proba_theo_corr, diff_bayes_theo_corr = get_probability_bayes(\n",
+    "                f_theo_corr[i_mic],\n",
+    "                freqs,\n",
+    "                mic_idx=i_mic,\n",
+    "                distance_range=distance_range,\n",
+    "                sigma=1.0,\n",
+    "                azimuth_deg=azimuth_deg\n",
+    "            )\n",
+    "            proba_theo_corr = (proba_theo_corr - np.min(proba_theo_corr) + EPS) / (\n",
+    "                np.max(proba_theo_corr) - np.min(proba_theo_corr) + EPS\n",
+    "            )\n",
+    "            distance_estimators['measured'].add_distribution(diff_bayes * 1e-2, proba, i_mic)\n",
+    "            distance_estimators['theo'].add_distribution(diff_bayes_theo * 1e-2, proba_theo, i_mic)\n",
+    "            distance_estimators['theo_corr'].add_distribution(diff_bayes_theo_corr * 1e-2, proba_theo_corr, i_mic)\n",
     "\n",
-    "            axs[2, i_mic].plot(\n",
-    "                # diff_bayes, proba\n",
-    "                distances_bayes,\n",
-    "                proba,\n",
+    "            axs[2, i_mic].plot(distances_bayes, proba, label='measured')\n",
+    "            axs[2, i_mic].plot(distances_bayes_theo, proba_theo, label='theo')\n",
+    "            axs[2, i_mic].plot(distances_bayes_theo_corr, proba_theo_corr, label='theo_corr')\n",
+    "\n",
+    "        for key, distance_estimator in distance_estimators.items():\n",
+    "            distance_total, proba_total = distance_estimator.get_distance_distribution(\n",
+    "                method=\"sum\", chosen_mics=None, azimuth_deg=azimuth_deg\n",
+    "            )\n",
+    "            ax_total.plot(\n",
+    "                distance_total * 1e2, proba_total, label=f\"{key} d={nominal_distances[slice_idx]}cm\",\n",
+    "                color=f\"C{slice_idx}\", ls=linestyles[key]\n",
     "            )\n",
     "\n",
-    "        distance_total, proba_total = distance_estimator.get_distance_distribution(\n",
-    "            method=\"sum\", chosen_mics=[0, 1, 3], azimuth_deg=azimuth_deg\n",
-    "        )\n",
-    "\n",
-    "        ax_total.plot(\n",
-    "            distance_total * 1e2, proba_total, label=f\"d={nominal_distances[slice_idx]}cm\"\n",
-    "        )\n",
-    "\n",
     "        axs[1, i_mic].legend()\n",
+    "        axs[2, i_mic].legend()\n",
     "        ax_distance.plot(distance_corr, label=nominal_distances[slice_idx])\n",
     "\n",
     "        for i_mic in range(f_calib_all.shape[0]):\n",
@@ -332,7 +397,7 @@
     "        slice_idx += 1\n",
     "\n",
     "    data_collector.fill_from_signal(\n",
-    "        signals_f, frequencies, distance=positions_all[i, 1], time=row.seconds[i]\n",
+    "        signals_f, frequencies, distance=row.positions[i, 1], time=row.seconds[i]\n",
     "    )\n",
     "\n",
     "ax_distance.legend(loc=\"upper right\")\n",
@@ -362,18 +427,169 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 2. Distance slice"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#exp_name = '2020_12_18_stepper'; appendix = \"\"; distance = 51\n",
+    "#exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
+    "#exp_name = '2021_03_01_flying';\n",
+    "#exp_name = '2021_04_30_hover';\n",
+    "exp_name = '2021_05_04_linear';\n",
+    "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
+    "\n",
+    "try:\n",
+    "    df_total = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
+    "except:\n",
+    "    answer = input('Run wall_analysis.py to parse experiments? (y/[n])') or 'n'\n",
+    "    if answer == 'y':\n",
+    "        df_total = parse_experiments(exp_name)\n",
+    "        pd.to_pickle(df_total, fname)\n",
+    "        print('saved', fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 positions analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "min_time = 0\n",
+    "max_time = np.inf\n",
+    "max_dist = 100 # cm\n",
+    "for i, row in df_total.iterrows():\n",
+    "    fig, axs = plot_plositions(row, min_time=None, max_time=None, max_dist=None)\n",
+    "    #save_fig(fig, f'plots/{exp_name}{row.appendix}_movement.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.2 plot audio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from frequency_analysis import add_spectrogram\n",
+    "from plotting_tools import pcolorfast_custom\n",
+    "\n",
+    "df_total = df_total.assign(spectrogram=None)\n",
+    "df_total = df_total.apply(add_spectrogram, axis=1)\n",
+    "\n",
+    "mic_idx = 0\n",
+    "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
+    "for i_col, row in df_total.iterrows():\n",
+    "    fig, ax = plot_audio(row, mic_idx=mic_idx)\n",
+    "    \n",
+    "    #plt.figure()\n",
+    "    #for time_idx in range(row.frequencies_matrix.shape[0]):\n",
+    "    #    mic_idx = 0\n",
+    "    #    freqs = row.frequencies_matrix[time_idx, :]\n",
+    "    #    response = np.abs(row.spectrogram[:, mic_idx, time_idx])\n",
+    "    #    plt.plot(freqs, response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_values = {\n",
+    "    '_1': 45,\n",
+    "    '_2': -45,\n",
+    "    '_3': 90,\n",
+    "    '_4': -30,\n",
+    "    '_5': 30,\n",
+    "    '_fast1': -45,\n",
+    "    '_fast2': 45,\n",
+    "    '_fast3': 90,\n",
+    "    '_fast4': 30,\n",
+    "    '_fast5': -30\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from inference import get_approach_angle_fft\n",
+    "\n",
+    "for i_row, row in df_total.iterrows():\n",
+    "    data_collector = DataCollector(exp_name=exp_name)\n",
+    "    for i in range(row.stft.shape[0]):\n",
+    "        signals_f = row.stft[i]\n",
+    "        frequencies = row.frequencies_matrix[i]\n",
+    "        data_collector.fill_from_signal(\n",
+    "            signals_f, frequencies, distance=row.positions[i, 1], time=row.seconds[i]\n",
+    "        )\n",
+    "    data_collector.to_numeric()\n",
+    "    \n",
+    "    n_mics = len(data_collector.df.mic.unique())\n",
+    "        \n",
+    "    fig, axs = plt.subplots(1, n_mics, sharey=True)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    for i_mic, (mic, df_mic) in enumerate(data_collector.df.groupby('mic')):\n",
+    "        axs[i_mic].plot(df_mic.distance[1:]*1e2, df_mic.magnitude[1:], color='C0')\n",
+    "        axs[i_mic].set_title(f'mic{i_mic}')\n",
+    "        axs[i_mic].set_xlabel('distance [cm]')\n",
+    "    axs[0].set_ylabel(f\"magnitude{row.appendix}\")\n",
+    "        \n",
+    "    counts = data_collector.df.groupby('frequency').time.count() # doesn't matter if we use time or other column\n",
+    "    f_best = counts.index[np.argmax(counts.values)]\n",
+    "    \n",
+    "    fig, axs = plt.subplots(1, n_mics, sharey=True)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    for i_mic in range(n_mics):\n",
+    "        d_slice, distances, *_ = data_collector.get_distance_slice(mic=i_mic)#, frequency=f_best)\n",
+    "        #d_slice -= np.mean(d_slice, axis=1)[None, :]\n",
+    "        angles, proba = get_approach_angle_fft(\n",
+    "            d_slice=d_slice[0],\n",
+    "            frequency=np.mean(counts.index),\n",
+    "            relative_distances_cm=distances*1e2,\n",
+    "            reduced=True\n",
+    "        )\n",
+    "        axs[i_mic].set_title(f'mic{i_mic}')\n",
+    "        axs[i_mic].plot(angles, proba, color='C1')\n",
+    "        axs[i_mic].axhline(gt_values[row.appendix])\n",
+    "    axs[0].set_ylabel(f\"probability{row.appendix}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
