Fix audio plotting

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -86,8 +86,28 @@
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.set_title(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
-    "    pcolorfast_custom(ax, row.seconds, all_frequencies, np.abs(spec))\n",
+    "    \n",
+    "    # mark too long measurements gray\n",
+    "    max_diff = 1\n",
+    "    diff = row.seconds[1:] - row.seconds[:-1]\n",
+    "    indices = np.where(diff>max_diff)[0]\n",
+    "    endings = row.seconds[:-1][indices]\n",
+    "    diff_average = np.mean(diff[diff<max_diff])\n",
+    "    seconds = row.seconds\n",
+    "    for counter, i in enumerate(indices):\n",
+    "        new_time = seconds[i+counter]+diff_average\n",
+    "        seconds = np.insert(seconds, i+counter+1, new_time)\n",
+    "        spec = np.insert(spec, i+counter+1, np.nan, axis=1)\n",
+    "    \n",
+    "    pcolorfast_custom(ax, seconds, all_frequencies, np.abs(spec))\n",
+    "    \n",
+    "    xticks = np.arange(0, row.seconds.max(), step=5)\n",
+    "    ax.set_xticks(xticks); ax.set_xticklabels(xticks)\n",
+    "    yticks = np.arange((np.round(row.frequencies_matrix.min()//1000)+1)*1000, \n",
+    "                       row.frequencies_matrix.max(), step=1000)\n",
+    "    ax.set_yticks(yticks); ax.set_yticklabels(yticks)\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
+    "    ax.set_xlabel('seconds [s]')\n",
     "    return fig, ax"
    ]
   },
@@ -132,6 +152,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from geometry import Context\n",
+    "context = Context.get_crazyflie_setup(dim=2)\n",
+    "context.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -149,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2 plot audio"
+    "## 1.2 audio analysis"
    ]
   },
   {
@@ -170,25 +201,14 @@
     "\n",
     "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
     "for i_col, row in df_total.iterrows():\n",
-    "    fig, ax = plot_audio(row, mic_idx=mic_idx)"
+    "    fig, ax = plot_audio(row, mic_idx=mic_idx)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# frequency slices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from geometry import Context\n",
-    "context = Context.get_crazyflie_setup(dim=2)\n",
-    "context.plot()"
+    "## 1.3 algorithm performance"
    ]
   },
   {
@@ -235,7 +255,11 @@
    "source": [
     "from dataset_parameters import kwargs_datasets\n",
     "from simulation import get_df_theory\n",
+    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
+    "azimuth_deg = WALL_ANGLE_DEG\n",
+    "\n",
+    "distance_range = [0, 70]\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "\n",
     "distances_grid = np.linspace(distance_range[0]+7, distance_range[1],100)\n",
@@ -257,13 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -274,7 +291,6 @@
     "from estimators import DistanceEstimator\n",
     "from inference import get_probability_bayes\n",
     "from simulation import get_freq_slice_theory\n",
-    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "linestyles = {\"measured\": \"-\", \"theo\": \":\", \"theo_corr\": \"-.\"}\n",
     "EPS = 1e-10\n",
@@ -282,9 +298,6 @@
     "starting_distance = 60  # [50, 30, 10]\n",
     "nominal_distances = [60 - i * 20 for i in range(3)]\n",
     "slice_idx = 0\n",
-    "\n",
-    "distance_range = [0, 70]\n",
-    "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
     "data_collector = DataCollector(exp_name=exp_name)\n",
     "\n",
@@ -470,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notes for this experiments\n",
+    "# Notes for this experiment\n",
     "\n",
     "- apply optimization algorithm including relative distance measurements\n",
     "- do normalization over all mics rater than per-mic "
@@ -520,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_values = {\n",
+    "starting_positions = {\n",
     "    '_1': [20, -50, 0, 45],\n",
     "    '_2': [-20, -50, 0, -45],\n",
     "    '_3': [0, -50, 0, 0],\n",
@@ -549,7 +562,7 @@
     "    return np.median(angles)\n",
     "\n",
     "def get_gt_angle(row):\n",
-    "    starting_yaw = gt_values[row.appendix][3]\n",
+    "    starting_yaw = starting_positions[row.appendix][3]\n",
     "    approach_angle = starting_yaw + 90\n",
     "    if approach_angle > 90:\n",
     "        approach_angle = 180 - approach_angle\n",
@@ -559,7 +572,7 @@
     "def plot_corrected_positions(row, max_idx=30, ax=None):\n",
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
-    "    starting_pose = gt_values[row.appendix]\n",
+    "    starting_pose = starting_positions[row.appendix]\n",
     "    positions_rot = np.empty_like(row.positions)\n",
     "    for j, pos in enumerate(row.positions):\n",
     "        total_yaw = starting_pose[3] + pos[3]\n",
@@ -593,7 +606,7 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
     "for i, row in df_total.iterrows():\n",
-    "    #fig, axs = plot_plositions(row, min_time=None, max_time=None, max_dist=None)\n",
+    "    fig, axs = plot_plositions(row, min_time=None, max_time=None, max_dist=None)\n",
     "    plot_corrected_positions(row, ax=ax)\n",
     "ax.legend(bbox_to_anchor=[1.0, 1.0], loc='upper left')"
    ]
@@ -602,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2 plot audio"
+    "## 1.2 audio analysis"
    ]
   },
   {
@@ -657,6 +670,13 @@
     "plt.plot(row.positions[:, 1]*1e2, positions_corr[:, 1])\n",
     "plt.xlabel('relative distance [cm]')\n",
     "plt.ylabel('distance from wall [cm]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3 algorithm analysis"
    ]
   },
   {
