Intermediate inference machine

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -230,6 +230,7 @@
    "outputs": [],
    "source": [
     "from calibration import get_calibration_function_median, get_calibration_function_dict\n",
+    "from inference import InferenceMachine\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -244,7 +245,9 @@
     "#else:\n",
     "#    calib_function, calib_freq = get_calibration_function_median(\n",
     "#        exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", ax=ax\n",
-    "#    )\n"
+    "#    )\n",
+    "inf_machine = InferenceMachine()\n",
+    "inf_machine.add_calibration_function(calib_function)"
    ]
   },
   {
@@ -258,8 +261,9 @@
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
-    "\n",
     "distance_range = [0, 70]\n",
+    "inf_machine.add_geometry(distance_range, azimuth_deg)\n",
+    "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "\n",
     "distances_grid = np.linspace(distance_range[0]+7, distance_range[1],100)\n",
@@ -333,6 +337,7 @@
     "        f_slice, freqs, stds, distances = data_collector.get_current_frequency_slice(\n",
     "            verbose=False\n",
     "        )\n",
+    "        print(stds)\n",
     "\n",
     "        fig, ax_total = plt.subplots()\n",
     "        fig.set_size_inches(10, 5)\n",
