Clean up inference handling

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -291,6 +291,7 @@
    "outputs": [],
    "source": [
     "# spec_masked, freqs_masked = data_collector.fill_from_row()\n",
+    "from copy import deepcopy\n",
     "from data_collector import DataCollector\n",
     "from estimators import DistanceEstimator\n",
     "from inference import get_probability_bayes\n",
@@ -318,11 +319,20 @@
     "f_calib_all = calib_function(freqs_calib)\n",
     "\n",
     "fig, ax_df = plt.subplots()\n",
-    "pcolorfast_custom(ax_df, distances_grid, freqs_theo, np.log10(df_matrix_theo[0]), cmap='Greys', n_xticks=10)\n",
-    "ax_df.set_xticks(xticks); ax_df.set_xticklabels(xticks)\n",
-    "ax_df.set_yticks(yticks); ax_df.set_yticklabels(yticks)\n",
-    "ax_df.set_xlabel('distance [cm]')\n",
-    "ax_df.set_ylabel('frequency [Hz]')\n",
+    "pcolorfast_custom(\n",
+    "    ax_df,\n",
+    "    distances_grid,\n",
+    "    freqs_theo,\n",
+    "    np.log10(df_matrix_theo[0]),\n",
+    "    cmap=\"Greys\",\n",
+    "    n_xticks=10,\n",
+    ")\n",
+    "ax_df.set_xticks(xticks)\n",
+    "ax_df.set_xticklabels(xticks)\n",
+    "ax_df.set_yticks(yticks)\n",
+    "ax_df.set_yticklabels(yticks)\n",
+    "ax_df.set_xlabel(\"distance [cm]\")\n",
+    "ax_df.set_ylabel(\"frequency [Hz]\")\n",
     "\n",
     "for i in range(row.stft.shape[0]):\n",
     "    signals_f = row.stft[i]\n",
@@ -337,7 +347,6 @@
     "        f_slice, freqs, stds, distances = data_collector.get_current_frequency_slice(\n",
     "            verbose=False\n",
     "        )\n",
-    "        print(stds)\n",
     "\n",
     "        fig, ax_total = plt.subplots()\n",
     "        fig.set_size_inches(10, 5)\n",
@@ -350,27 +359,19 @@
     "        fig.suptitle(f\"up to {data_collector.latest_fslice_time:.1f}s\", y=0.9)\n",
     "        # fig.set_suptitle(f\"experiment {row.appendix}\")\n",
     "\n",
-    "        # extract valid indices\n",
-    "        valid_idx = (\n",
-    "            (freqs >= min(calib_function.x))\n",
-    "            & (freqs <= max(calib_function.x))\n",
-    "            & ((3800 <= freqs) | (freqs <= 3700))\n",
-    "        )\n",
-    "        freqs = freqs[valid_idx]\n",
-    "        f_calib = calib_function(freqs)\n",
-    "        f_slice = f_slice[:, valid_idx]\n",
-    "        distances = distances[valid_idx]\n",
     "\n",
-    "        distance_corr = starting_distance - distances\n",
+    "        # TODO: remove these intermediate things\n",
+    "        inf_machine.add_data(deepcopy(f_slice), freqs, stds, distances)\n",
+    "        inf_machine.calibrate()\n",
+    "        inf_machine.filter_out_freqs([3700, 3800])\n",
+    "        \n",
+    "        # raw data\n",
+    "        freqs = inf_machine.values[inf_machine.valid_idx]\n",
+    "        f_slice = f_slice[:, inf_machine.valid_idx]\n",
+    "\n",
+    "        distance_corr = starting_distance - inf_machine.distances[inf_machine.valid_idx]\n",
     "        ax_df.scatter(distance_corr, freqs, color=f\"C{slice_idx}\")\n",
-    "\n",
-    "        f_theo = get_freq_slice_theory(\n",
-    "            freqs, distance_cm=nominal_distances[slice_idx], azimuth_deg=azimuth_deg\n",
-    "        ).T  # n_mics x n_freqs\n",
-    "        f_theo_corr = get_freq_slice_theory(\n",
-    "            freqs, distance_cm=distance_corr, azimuth_deg=azimuth_deg\n",
-    "        ).T\n",
-    "\n",
+    "        \n",
     "        print(\"treating new frequency slice\")\n",
     "\n",
     "        distance_estimators = {\n",
@@ -380,77 +381,53 @@
     "        }\n",
     "\n",
     "        for i_mic in range(f_slice.shape[0]):\n",
+    "            \n",
     "            axs[0, i_mic].plot(freqs, f_slice[i_mic], label=\"measured\")\n",
     "            axs[0, i_mic].legend(loc=\"upper right\")\n",
-    "\n",
-    "            f_calibrated = f_slice[i_mic] / f_calib[i_mic]\n",
-    "\n",
-    "            axs[1, i_mic].plot(freqs, f_calibrated, label=\"measured\", ls=\"-\")\n",
-    "            axs[1, i_mic].plot(freqs, f_theo[i_mic], label=\"theo\", color=f\"C6\", ls=\":\")\n",
-    "            axs[1, i_mic].plot(\n",
-    "                freqs, f_theo_corr[i_mic], label=\"theo corr\", color=\"C7\", ls=\"-.\"\n",
-    "            )\n",
     "            axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
     "\n",
+    "            \n",
+    "        for i_mic in range(f_slice.shape[0]):\n",
     "            # get probability distribution\n",
-    "            valid = ~np.isnan(f_calibrated)\n",
-    "            distances_bayes, proba, diff_bayes = get_probability_bayes(\n",
-    "                f_calibrated[valid],\n",
-    "                freqs[valid],\n",
-    "                mic_idx=i_mic,\n",
-    "                distance_range=distance_range,\n",
-    "                sigma=1.0,\n",
-    "                azimuth_deg=azimuth_deg,\n",
-    "            )\n",
-    "            proba = (proba - np.min(proba) + EPS) / (\n",
-    "                np.max(proba) - np.min(proba) + EPS\n",
-    "            )\n",
-    "\n",
-    "            # get probability distribution with theoretical\n",
-    "            valid = np.all(~np.isnan(f_theo), axis=0)\n",
-    "            distances_bayes_theo, proba_theo, diff_bayes_theo = get_probability_bayes(\n",
-    "                f_theo[i_mic, valid],\n",
-    "                freqs[valid],\n",
-    "                mic_idx=i_mic,\n",
-    "                distance_range=distance_range,\n",
-    "                sigma=1.0,\n",
-    "                azimuth_deg=azimuth_deg,\n",
-    "            )\n",
-    "            proba_theo = (proba_theo - np.min(proba_theo) + EPS) / (\n",
-    "                np.max(proba_theo) - np.min(proba_theo) + EPS\n",
-    "            )\n",
-    "\n",
-    "            valid = np.all(~np.isnan(f_theo_corr), axis=0)\n",
-    "            (\n",
-    "                distances_bayes_theo_corr,\n",
-    "                proba_theo_corr,\n",
-    "                diff_bayes_theo_corr,\n",
-    "            ) = get_probability_bayes(\n",
-    "                f_theo_corr[i_mic, valid],\n",
-    "                freqs[valid],\n",
-    "                mic_idx=i_mic,\n",
-    "                distance_range=distance_range,\n",
-    "                sigma=1.0,\n",
-    "                azimuth_deg=azimuth_deg,\n",
-    "            )\n",
-    "            proba_theo_corr = (proba_theo_corr - np.min(proba_theo_corr) + EPS) / (\n",
-    "                np.max(proba_theo_corr) - np.min(proba_theo_corr) + EPS\n",
+    "            distances_bayes, proba, diff_bayes = inf_machine.do_inference(\n",
+    "                mic_idx=i_mic, algorithm=\"bayes\", normalize=True\n",
     "            )\n",
     "            distance_estimators[\"measured\"].add_distribution(\n",
     "                diff_bayes * 1e-2, proba, i_mic\n",
     "            )\n",
+    "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"measured\")\n",
+    "            axs[2, i_mic].plot(distances_bayes, proba, label=\"measured\")\n",
+    "            \n",
+    "\n",
+    "        f_theo = get_freq_slice_theory(\n",
+    "            freqs, distance_cm=nominal_distances[slice_idx], azimuth_deg=azimuth_deg\n",
+    "        ).T  # n_mics x n_freqs\n",
+    "        inf_machine.add_data(f_theo, freqs)\n",
+    "        for i_mic in range(f_theo.shape[0]):\n",
+    "            distances_bayes_theo, proba_theo, diff_bayes_theo = inf_machine.do_inference(\n",
+    "                mic_idx=i_mic, algorithm=\"bayes\", normalize=True, calibrate=False\n",
+    "            )\n",
     "            distance_estimators[\"theo\"].add_distribution(\n",
     "                diff_bayes_theo * 1e-2, proba_theo, i_mic\n",
+    "            )\n",
+    "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"theo\", color=\"C6\", ls=\":\")\n",
+    "            axs[2, i_mic].plot(distances_bayes_theo, proba_theo, label=\"theo\")\n",
+    "            \n",
+    "        f_theo_corr = get_freq_slice_theory(\n",
+    "            freqs, distance_cm=distance_corr, azimuth_deg=azimuth_deg\n",
+    "        ).T\n",
+    "        inf_machine.add_data(f_theo_corr, freqs)\n",
+    "        for i_mic in range(f_theo_corr.shape[0]):\n",
+    "            distances_bayes_theo_corr, proba_theo_corr, diff_bayes_theo_corr = inf_machine.do_inference(\n",
+    "                mic_idx=i_mic, algorithm=\"bayes\", normalize=True, calibrate=False\n",
     "            )\n",
     "            distance_estimators[\"theo_corr\"].add_distribution(\n",
     "                diff_bayes_theo_corr * 1e-2, proba_theo_corr, i_mic\n",
     "            )\n",
-    "\n",
-    "            axs[2, i_mic].plot(distances_bayes, proba, label=\"measured\")\n",
-    "            axs[2, i_mic].plot(distances_bayes_theo, proba_theo, label=\"theo\")\n",
     "            axs[2, i_mic].plot(\n",
     "                distances_bayes_theo_corr, proba_theo_corr, label=\"theo_corr\"\n",
     "            )\n",
+    "            inf_machine.plot(i_mic, ax=axs[1, i_mic], label=\"theo_corr\", color=\"C7\", ls=\":\")\n",
     "\n",
     "        for key, distance_estimator in distance_estimators.items():\n",
     "            distance_total, proba_total = distance_estimator.get_distance_distribution(\n",
